--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.1.0", 
+    "@angular/animations": "~13.1.0",
     "@angular/common": "~13.1.0",
     "@angular/compiler": "~13.1.0",
     "@angular/core": "~13.1.0",
@@ -18,7 +18,10 @@
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
+    "@types/geojson": "^7946.0.8",
+    "@types/maplibre-gl": "^1.14.0",
     "imagekitio-angular": "^1.0.2",
+    "maplibre-gl": "^2.1.9",
     "ng-zorro-antd": "^13.0.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
