--- a/backend/package.json
+++ b/backend/package.json
@@ -13,12 +13,15 @@
   "license": "ISC",
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "date-fns": "^2.29.2",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^6.3.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.7",
     "morgan": "^1.10.0",
     "slugify": "^1.6.5",
@@ -26,8 +29,11 @@
   },
   "devDependencies": {
     "@tsconfig/node16": "^1.0.2",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.1",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^17.0.22",
     "@types/validator": "^13.7.2",
     "eslint": "^5.16.0",
