--- a/backend/package.json
+++ b/backend/package.json
@@ -20,12 +20,14 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-mongo-sanitize": "^2.2.0",
-    "express-rate-limit": "^6.3.0",
+    "express-rate-limit": "^6.6.0",
+    "helmet": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.7",
     "morgan": "^1.10.0",
     "slugify": "^1.6.5",
-    "validator": "^13.7.0"
+    "validator": "^13.7.0",
+    "xss-clean": "^0.1.1"
   },
   "devDependencies": {
     "@tsconfig/node16": "^1.0.2",
