added compression package and updated build command

--- a/backend/package.json
+++ b/backend/package.json
@@ -6,14 +6,16 @@
   "scripts": {
     "start": "node dist/server.js",
     "dev": "nodemon src/server.ts",
-    "build": "tsc -p .",
+    "build": "npx tsc -p .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
+    "@types/compression": "^1.7.2",
     "bcryptjs": "^2.4.3",
+    "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "date-fns": "^2.29.2",
@@ -47,6 +49,7 @@
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.4",
     "nodemon": "^2.0.15",
+    "parcel": "^2.7.0",
     "parcel-bundler": "^1.12.3",
     "prettier": "^1.17.0",
     "ts-node": "^10.7.0",
